# multimodal-embedding

./: .gitignore  README.md  embedding.py  pyproject.toml
