[project]
name = "multimodal-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "chromadb>=1.0.0",
    "openai-whisper>=20240930",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pytube>=15.0.0",
    "pytubefix>=8.12.3",
    "torch>=2.6.0",
    "transformers>=4.51.0",
]
